force-app/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <description>Named grouping of ad inventory (a show, network slot, or digital placement). Media_Cloud_Ad_Space_ID__c is populated by the nightly Matrix inventory sync.</description>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>