force-app/main/default/objects/Vehicle__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Optional primary station for this vehicle. For vehicles that air on multiple stations, use Vehicle_Channel__c junction records instead.</description>
    <label>Primary Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipLabel>Vehicles (Primary)</relationshipLabel>
    <relationshipName>Vehicles_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>