force-app/main/default/objects/Vehicle__c/fields/Day_Part__c.field-meta.xml
<CustomField>
    <fullName>Day_Part__c</fullName>
    <label>Day Part</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Morning</fullName>
            </value>
            <value>
                <fullName>Daytime</fullName>
            </value>
            <value>
                <fullName>Early Fringe</fullName>
            </value>
            <value>
                <fullName>Prime Access</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Late News</fullName>
            </value>
            <value>
                <fullName>Late Fringe</fullName>
            </value>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>