force-app/main/default/objects/Vehicle__c/fields/Last_Matrix_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Matrix_Sync__c</fullName>
    <description>Timestamp of the last successful Matrix sync that updated this vehicle record.</description>
    <label>Last Matrix Sync</label>
    <type>DateTime</type>
</CustomField>