force-app/main/default/objects/Vehicle__c/fields/Matrix_Avail_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Avail_Last_Updated__c</fullName>
    <description>Timestamp of the last inventory update received from Matrix for this vehicle. Used as the conflict threshold: new Matrix data is only applied if its timestamp is newer than this value.</description>
    <label>Matrix Avail Last Updated</label>
    <type>DateTime</type>
</CustomField>