force-app/main/default/objects/Vehicle__c/fields/Matrix_Avail_Units__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Avail_Units__c</fullName>
    <description>Available spot/unit inventory for this vehicle as reported by Matrix. Updated by the MatrixInventoryScheduler every 15 minutes. Matrix is the system of record for this field — do not edit manually.</description>
    <label>Matrix Avail Units</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>