force-app/main/default/objects/Vehicle__c/fields/Matrix_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Sync_Status__c</fullName>
    <description>Current sync state with Matrix. Set by MatrixInventorySyncQueueable.</description>
    <label>Matrix Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>