force-app/main/default/objects/Vehicle__c/fields/Media_Cloud_Ad_Space_ID__c.field-meta.xml
<CustomField>
    <fullName>Media_Cloud_Ad_Space_ID__c</fullName>
    <label>Media Cloud Ad Space ID</label>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
</CustomField>