force-app/main/default/objects/Vehicle__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>The specific program or show name associated with this vehicle. Informational — use Vehicle_Type__c to categorize the vehicle.</description>
    <label>Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>