force-app/main/default/objects/Vehicle__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>