force-app/main/default/objects/Vehicle__c/fields/Vehicle_Code__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Code__c</fullName>
    <description>Short alphanumeric code identifying this vehicle (e.g., BMF, GN, PN). Must be unique across all vehicles.</description>
    <label>Vehicle Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>